# prompt-engineering-lab

./: .gitignore  README.es.md  README.md  pyproject.toml  requirements.txt
docs/: leccion-01-cliente-api.md  proyecto-a-clasificador-tickets.md  quiz.html
examples/: basic_usage.py  chat.py
experiments/: exp00_verificar_keys_colab.py  exp00b_descubrir_modelos_hf_colab.py  exp01_ingles_vs_espanol_colab.py  exp02_chat_bilingue_vs_espanol_colab.py
projects/proyecto_a_clasificador_tickets/: dataset.json  evaluate.py  prompts.py  resultados.json  test_clasificador.py  test_evaluate.py
projects/proyecto_b_extractor_datos/: casos.yaml  evaluate.py  experimento_system.py  prompts.py  resultados.json  resultados_experimento_system.json  test_extractor.py
prompt_engineering_lab/: __init__.py  client.py  groq_client.py
tests/: test_client.py
