[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engineering-lab"
version = "0.1.0"
description = "Reusable Claude API client and prompt engineering experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[tool.setuptools.packages.find]
include = ["prompt_engineering_lab*"]
